# scikit-multiflow

./: noxfile.py  pyproject.toml  requirements.txt  setup.py
src/skmultiflow/metrics/: setup.py
